Fix methods that has been deprecated in jdk 21  and unchecked, raw type warning